--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongoose": "^4.13.8",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "multer": "^1.3.0"
   },
   "devDependencies": {
+    "@types/node": "^8.5.2",
     "nodemon": "^1.14.3"
   }
 }
