--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "David",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongoose": "^4.13.8",
