--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.8",
     "morgan": "^1.9.0",
     "multer": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^8.5.2",
-    "nodemon": "^1.14.3"
+    "nodemon": "^1.14.6"
   }
 }
